# coda-self-service

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.e2e  README.md  pyproject.toml
.agents/skills/read-docs/: SKILL.md
.agents/skills/update-changelog/: SKILL.md
.agents/skills/update-docs/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: INDEX.md
docs/auth/: INDEX.md  KEYPAIR_LIFECYCLE.md  SIGNING.md
docs/configuration/: ENVIRONMENT_VARIABLES.md  INDEX.md  SETTINGS_REFERENCE.md  environment-variables.md  settings-reference.md
docs/frameworks/: DEVICE_CONFIG.md  FRAMEWORK_PROTOCOL.md  INDEX.md  REGISTRY.md  device-config.md  framework-protocol.md  registry.md
docs/jobs/: CONSUMER.md  EXECUTOR.md  INDEX.md  IR_SCHEMA.md  executor.md  ir-schema.md
docs/node/: CONNECT_PROTOCOL.md  CREDENTIAL_PERSISTENCE.md  INDEX.md  TOKEN_LIFECYCLE.md
docs/operations/: CLI.md  ERROR_HANDLING.md  GRACEFUL_SHUTDOWN.md  HEALTH_ENDPOINTS.md  INDEX.md
docs/self-service/: CONNECT_PROTOCOL.md  CREDENTIAL_PERSISTENCE.md  INDEX.md  connect-protocol.md  credential-persistence.md  token-lifecycle.md
docs/vpn/: CLOUD_INFRASTRUCTURE.md  HEALTH_MONITORING.md  INDEX.md  TUNNEL_LIFECYCLE.md  health-monitoring.md  tunnel-lifecycle.md
docs/webhooks/: DELIVERY.md  INDEX.md  PAYLOAD_FORMAT.md
self_service/server/: app.py  cli.py  config.py
self_service/vpn/: __init__.py  service.py
src/coda_node/: __init__.py  errors.py
src/coda_node/server/: __init__.py  app.py  auth.py  cli.py  config.py  consumer.py  daemon.py  executor.py  heartbeat.py  ir.py  qasm.py  webhook.py
src/coda_node/vpn/: __init__.py  guard.py  service.py
src/self_service/: __init__.py  errors.py
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_consumer.py  test_daemon.py  test_frameworks.py  test_heartbeat.py  test_ir.py  test_main.py  test_node.py  test_qasm.py  test_self_service.py  test_self_service_smoketest.py  test_vpn.py  test_webhook.py
(+20 files in other folders)
